--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "eafd",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "\"Enter name here\" can eat a fat, um, turkey",
   "main": "index.js",
-  "files": ["index.js", "cli.js", "audio/eafd.mp3"],
-  "engines" : {
-    "node" : ">=8.0.0"
+  "files": [
+    "index.js",
+    "cli.js",
+    "audio/eafd.mp3"
+  ],
+  "engines": {
+    "node": ">=8.0.0"
   },
   "bin": {
     "eafd": "cli.js"
@@ -32,8 +36,8 @@
   },
   "homepage": "https://github.com/doesdev/eafd#readme",
   "dependencies": {
-    "axios": "^0.17.0",
-    "google-tts-api": "0.0.2",
-    "validator": "^9.1.0"
+    "axios": "^0.19.0",
+    "google-tts-api": "0.0.4",
+    "validator": "^11.1.0"
   }
 }
